--- a/.github/workflows/build-on-tagpush.yml
+++ b/.github/workflows/build-on-tagpush.yml
@@ -11,10 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    strategy:
+      matrix:
+        arch: [aarch64, arm, x86_64]
+    runs-on: ubuntu-latest
+    timeout-minutes: 600
     steps:
     - uses: actions/checkout@v3
     - uses: ncipollo/release-action@v1
       with:
         artifacts: "release.tar.gz,foo/*.txt"
         bodyFile: "body.md"
+        name: ${{ github.ref_name }}_${{ matrix.arch }}_${{github.sha}}
         token: ${{ secrets.GITHUB_TOKEN }}
