--- a/.github/workflows/build-on-tagpush.yml
+++ b/.github/workflows/build-on-tagpush.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: ncipollo/release-action@v1
       with:
-        artifacts: "release.tar.gz,foo/*.txt"
+        artifacts: "body.md"
         bodyFile: "body.md"
         name: ${{ github.ref_name }}_${{ matrix.arch }}_${{github.sha}}
         token: ${{ secrets.GITHUB_TOKEN }}
